src/rules/flake8_datetimez/snapshots/ruff__flake8_datetimez__tests__DTZ003_DTZ003.py.snap
---
source: src/flake8_datetimez/mod.rs
expression: checks
---
- kind:
    CallDatetimeUtcnow: ~
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 26
  fix: ~
  parent: ~
- kind:
    CallDatetimeUtcnow: ~
  location:
    row: 9
    column: 0
  end_location:
    row: 9
    column: 17
  fix: ~
  parent: ~

