src/rules/flake8_datetimez/snapshots/ruff__flake8_datetimez__tests__DTZ006_DTZ006.py.snap
---
source: src/flake8_datetimez/mod.rs
expression: checks
---
- kind:
    CallDatetimeFromtimestamp: ~
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 37
  fix: ~
  parent: ~
- kind:
    CallDatetimeFromtimestamp: ~
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 64
  fix: ~
  parent: ~
- kind:
    CallDatetimeFromtimestamp: ~
  location:
    row: 10
    column: 0
  end_location:
    row: 10
    column: 43
  fix: ~
  parent: ~
- kind:
    CallDatetimeFromtimestamp: ~
  location:
    row: 13
    column: 0
  end_location:
    row: 13
    column: 46
  fix: ~
  parent: ~
- kind:
    CallDatetimeFromtimestamp: ~
  location:
    row: 18
    column: 0
  end_location:
    row: 18
    column: 28
  fix: ~
  parent: ~

