src/rules/flake8_datetimez/snapshots/ruff__flake8_datetimez__tests__DTZ011_DTZ011.py.snap
---
source: src/flake8_datetimez/mod.rs
expression: checks
---
- kind:
    CallDateToday: ~
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 21
  fix: ~
  parent: ~
- kind:
    CallDateToday: ~
  location:
    row: 9
    column: 0
  end_location:
    row: 9
    column: 12
  fix: ~
  parent: ~

